# analytics-engineering-playground

./: .user.yml  Makefile  pyproject.toml
dags/: .user.yml  dbt_project.yml  profiles.yml
dags/macros/: generate_schema_name.sql
dags/models/stage/: sources.yml  stg_london_crime.sql
dags/seeds/dimension/: dim_lookup.csv  dim_lsoa_boundaries.csv  dim_lsoa_centroids.csv
dags/seeds/stage/: stg_2014_female_population.csv  stg_2014_male_population.csv
