[tool.poetry]
name = "analytics-engineering-playground"
version = "0.1.0"
description = ""
authors = ["Shaun Moate <shaun.moate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.7.1"
dbt-bigquery = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
